--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<html lang="en"></html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your description here">
-    <title>Your Page Title</title>
-    <!-- You can also add other meta tags or links here -->
+    <meta http-equiv="refresh" content="0;url=./dist/index.html">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1>Welcome to My Site</h1>
-    <p>This is a simple page to access the ./dist/index.html file.</p>
-    <a href="./dist/index.html">Go to dist/index.html</a>
+    <!-- No clickable link needed; this content will only be shown momentarily if JavaScript or the meta tag fails -->
 </body>
 </html>
